# storage/api-docs/api-docs.json
@@ -181,54 +181,6 @@
                             }
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "string",
-                                            "example": "error"
-                                        },
-                                        "statusCode": {
-                                            "type": "integer",
-                                            "example": 404
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Not Found"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "string",
-                                            "example": "error"
-                                        },
-                                        "statusCode": {
-                                            "type": "integer",
-                                            "example": 422
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Unprocessable Entity"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
                     "500": {
                         "description": "Internal server error",
                         "content": {
@@ -381,7 +333,7 @@
                 }
             }
         },
-        "/api/devices/{uuid}/pings/": {
+        "/api/devices/{uuid}/ping/": {
             "post": {
                 "tags": [
                     "Devices"
@@ -389,6 +341,18 @@
                 "summary": "Store ping",
                 "description": "Store ping",
                 "operationId": "storePing",
+                "parameters": [
+                    {
+                        "name": "uuid",
+                        "in": "path",
+                        "description": "Device uuid",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "550e8400-e29b-41d4-a716-446655440000"
+                    }
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
